Changed some names of the projects and solution.

--- a/ECS.ElectricalControls/ECS.ElectricalControls.csproj
+++ b/ECS.ElectricalControls/ECS.ElectricalControls.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.0</TargetFramework>
-    <AssemblyName>ElectricalControlSystem.ElectricalControls</AssemblyName>
+    <AssemblyName>ECS.ElectricalControls</AssemblyName>
   </PropertyGroup>
 
 </Project>
