--- a/ECS.Desktop.WindowsApplication/ECS.Desktop.WindowsApplication.csproj
+++ b/ECS.Desktop.WindowsApplication/ECS.Desktop.WindowsApplication.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\ElectricalControlSystem.ElectricalControls\ElectricalControlSystem.ElectricalControls.csproj" />
+    <ProjectReference Include="..\ECS.ElectricalControls\ECS.ElectricalControls.csproj" />
   </ItemGroup>
 
 </Project>
